CDAP-13169 Adding transactional publishing and offset management for runtime monitor